Status and types tables dropped Imported from Changeset 2567

--- a/GaneEcommerce.Data/Ganedata.Core.Data.csproj
+++ b/GaneEcommerce.Data/Ganedata.Core.Data.csproj
@@ -883,6 +883,10 @@
     <Compile Include="Migrations\202006011852551_add-DefaultValue-column-to-UISettingItems-table.designer.cs">
       <DependentUpon>202006011852551_add-DefaultValue-column-to-UISettingItems-table.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\202006030318013_Status-types-tables-dropped.cs" />
+    <Compile Include="Migrations\202006030318013_Status-types-tables-dropped.designer.cs">
+      <DependentUpon>202006030318013_Status-types-tables-dropped.cs</DependentUpon>
+    </Compile>
     <Compile Include="MyDbConfiguration.cs" />
     <Compile Include="Helpers\DataImportFactory.cs" />
     <Compile Include="IApplicationContext.cs" />
@@ -1865,6 +1869,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Migrations\202006011852551_add-DefaultValue-column-to-UISettingItems-table.resx">
       <DependentUpon>202006011852551_add-DefaultValue-column-to-UISettingItems-table.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\202006030318013_Status-types-tables-dropped.resx">
+      <DependentUpon>202006030318013_Status-types-tables-dropped.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <ItemGroup>
