--- a/WarehouseEcommerce/WarehouseEcommerce.csproj
+++ b/WarehouseEcommerce/WarehouseEcommerce.csproj
@@ -330,15 +330,21 @@
     <Content Include="Content\Theme\University\app\css\customfontIcons.css" />
     <Content Include="Content\Theme\University\app\css\fonts-and-icons.css" />
     <Content Include="Content\Theme\University\app\css\jquery-confirm.min.css" />
+    <Content Include="fonts\gotham\Gotham-Book.svg" />
+    <Content Include="fonts\gotham\Gotham-ExtraLight.svg" />
+    <Content Include="fonts\gotham\Gotham-Light.svg" />
+    <Content Include="fonts\gotham\Gotham-Medium.svg" />
+    <Content Include="fonts\gotham\GothamBlack.svg" />
+    <Content Include="fonts\gotham\GothamBold.svg" />
     <Content Include="Content\Theme\University\app\js\jquery-confirm.min.js" />
     <Content Include="Content\Theme\University\app\css\App.css" />
     <Content Include="Content\Theme\University\app\css\northumbria_responsive.css" />
     <Content Include="Content\Theme\University\app\css\owl.carousel.min.css" />
     <Content Include="Content\Theme\University\app\css\skew_carousle_style.css" />
     <Content Include="Content\Theme\University\app\fonts\icomoon.svg" />
-    <Content Include="Content\Theme\University\app\fonts\SegoeUI-Bold.svg" />
-    <Content Include="Content\Theme\University\app\fonts\SegoeUI-Semibold.svg" />
-    <Content Include="Content\Theme\University\app\fonts\SegoeUI.svg" />
+    <Content Include="fonts\segoeui\SegoeUI-Bold.svg" />
+    <Content Include="fonts\segoeui\SegoeUI-Semibold.svg" />
+    <Content Include="fonts\segoeui\SegoeUI.svg" />
     <Content Include="Content\Theme\University\app\images\ajax-loader-overlay.gif" />
     <Content Include="Content\Theme\University\app\images\banner\image1.jpg" />
     <Content Include="Content\Theme\University\app\images\banner\image2.jpg" />
@@ -595,15 +601,15 @@
     <Content Include="Content\Theme\University\app\fonts\icomoon.eot" />
     <Content Include="Content\Theme\University\app\fonts\icomoon.ttf" />
     <Content Include="Content\Theme\University\app\fonts\icomoon.woff" />
-    <Content Include="Content\Theme\University\app\fonts\SegoeUI-Bold.eot" />
-    <Content Include="Content\Theme\University\app\fonts\SegoeUI-Bold.ttf" />
-    <Content Include="Content\Theme\University\app\fonts\SegoeUI-Bold.woff" />
-    <Content Include="Content\Theme\University\app\fonts\SegoeUI-Semibold.eot" />
-    <Content Include="Content\Theme\University\app\fonts\SegoeUI-Semibold.ttf" />
-    <Content Include="Content\Theme\University\app\fonts\SegoeUI-Semibold.woff" />
-    <Content Include="Content\Theme\University\app\fonts\SegoeUI.eot" />
-    <Content Include="Content\Theme\University\app\fonts\SegoeUI.ttf" />
-    <Content Include="Content\Theme\University\app\fonts\SegoeUI.woff" />
+    <Content Include="fonts\segoeui\SegoeUI-Bold.eot" />
+    <Content Include="fonts\segoeui\SegoeUI-Bold.ttf" />
+    <Content Include="fonts\segoeui\SegoeUI-Bold.woff" />
+    <Content Include="fonts\segoeui\SegoeUI-Semibold.eot" />
+    <Content Include="fonts\segoeui\SegoeUI-Semibold.ttf" />
+    <Content Include="fonts\segoeui\SegoeUI-Semibold.woff" />
+    <Content Include="fonts\segoeui\SegoeUI.eot" />
+    <Content Include="fonts\segoeui\SegoeUI.ttf" />
+    <Content Include="fonts\segoeui\SegoeUI.woff" />
     <Content Include="Content\Theme\University\app\fonts\selection.json" />
     <Content Include="Views\Theme\University\Shared\_LoginRegisterPartial.cshtml" />
     <Content Include="Views\Theme\University\Shared\_SliderPartial.cshtml" />
@@ -625,6 +631,69 @@
     <Content Include="Views\Theme\University\Products\AddToCart.cshtml" />
     <Content Include="Views\Theme\University\Products\Category.cshtml" />
     <Content Include="Views\Theme\University\Products\CategoryDetail.cshtml" />
+    <Content Include="fonts\gotham\Gotham-Book.eot" />
+    <Content Include="fonts\gotham\Gotham-Book.otf" />
+    <Content Include="fonts\gotham\Gotham-Book.ttf" />
+    <Content Include="fonts\gotham\Gotham-Book.woff" />
+    <Content Include="fonts\gotham\Gotham-ExtraLight.eot" />
+    <Content Include="fonts\gotham\Gotham-ExtraLight.otf" />
+    <Content Include="fonts\gotham\Gotham-ExtraLight.ttf" />
+    <Content Include="fonts\gotham\Gotham-ExtraLight.woff" />
+    <Content Include="fonts\gotham\Gotham-Light.eot" />
+    <Content Include="fonts\gotham\Gotham-Light.otf" />
+    <Content Include="fonts\gotham\Gotham-Light.ttf" />
+    <Content Include="fonts\gotham\Gotham-Light.woff" />
+    <Content Include="fonts\gotham\Gotham-Medium %281%29.woff" />
+    <Content Include="fonts\gotham\Gotham-Medium.eot" />
+    <Content Include="fonts\gotham\Gotham-Medium.otf" />
+    <Content Include="fonts\gotham\Gotham-Medium.ttf" />
+    <Content Include="fonts\gotham\Gotham-Medium.woff" />
+    <Content Include="fonts\gotham\GothamBlack.eot" />
+    <Content Include="fonts\gotham\GothamBlack.ttf" />
+    <Content Include="fonts\gotham\GothamBlack.woff" />
+    <Content Include="fonts\gotham\GothamBold.eot" />
+    <Content Include="fonts\gotham\GothamBold.ttf" />
+    <Content Include="fonts\gotham\GothamBold.woff" />
+    <Content Include="fonts\roboto\Roboto-Black.ttf" />
+    <Content Include="fonts\roboto\Roboto-BlackItalic.ttf" />
+    <Content Include="fonts\roboto\Roboto-Bold.ttf" />
+    <Content Include="fonts\roboto\Roboto-BoldItalic.ttf" />
+    <Content Include="fonts\roboto\Roboto-Italic.ttf" />
+    <Content Include="fonts\roboto\Roboto-Light.ttf" />
+    <Content Include="fonts\roboto\Roboto-LightItalic.ttf" />
+    <Content Include="fonts\roboto\Roboto-Medium.ttf" />
+    <Content Include="fonts\roboto\Roboto-MediumItalic.ttf" />
+    <Content Include="fonts\roboto\Roboto-Regular.ttf" />
+    <Content Include="fonts\roboto\Roboto-Thin.ttf" />
+    <Content Include="fonts\roboto\Roboto-ThinItalic.ttf" />
+    <Content Include="fonts\opensans\OpenSans-Bold.ttf" />
+    <Content Include="fonts\opensans\OpenSans-BoldItalic.ttf" />
+    <Content Include="fonts\opensans\OpenSans-ExtraBold.ttf" />
+    <Content Include="fonts\opensans\OpenSans-ExtraBoldItalic.ttf" />
+    <Content Include="fonts\opensans\OpenSans-Italic.ttf" />
+    <Content Include="fonts\opensans\OpenSans-Light.ttf" />
+    <Content Include="fonts\opensans\OpenSans-LightItalic.ttf" />
+    <Content Include="fonts\opensans\OpenSans-Regular.ttf" />
+    <Content Include="fonts\opensans\OpenSans-SemiBold.ttf" />
+    <Content Include="fonts\opensans\OpenSans-SemiBoldItalic.ttf" />
+    <Content Include="fonts\montserrat\Montserrat-Black.ttf" />
+    <Content Include="fonts\montserrat\Montserrat-BlackItalic.ttf" />
+    <Content Include="fonts\montserrat\Montserrat-Bold.ttf" />
+    <Content Include="fonts\montserrat\Montserrat-BoldItalic.ttf" />
+    <Content Include="fonts\montserrat\Montserrat-ExtraBold.ttf" />
+    <Content Include="fonts\montserrat\Montserrat-ExtraBoldItalic.ttf" />
+    <Content Include="fonts\montserrat\Montserrat-ExtraLight.ttf" />
+    <Content Include="fonts\montserrat\Montserrat-ExtraLightItalic.ttf" />
+    <Content Include="fonts\montserrat\Montserrat-Italic.ttf" />
+    <Content Include="fonts\montserrat\Montserrat-Light.ttf" />
+    <Content Include="fonts\montserrat\Montserrat-LightItalic.ttf" />
+    <Content Include="fonts\montserrat\Montserrat-Medium.ttf" />
+    <Content Include="fonts\montserrat\Montserrat-MediumItalic.ttf" />
+    <Content Include="fonts\montserrat\Montserrat-Regular.ttf" />
+    <Content Include="fonts\montserrat\Montserrat-SemiBold.ttf" />
+    <Content Include="fonts\montserrat\Montserrat-SemiBoldItalic.ttf" />
+    <Content Include="fonts\montserrat\Montserrat-Thin.ttf" />
+    <Content Include="fonts\montserrat\Montserrat-ThinItalic.ttf" />
     <None Include="packages.config" />
     <None Include="Properties\PublishProfiles\FolderProfile.pubxml" />
     <Content Include="Scripts\esm\popper-utils.js" />
@@ -1113,9 +1182,7 @@
     <Content Include="Views\Theme\University\Error\Index.cshtml" />
     <Content Include="Views\Theme\University\Products\WishList.cshtml" />
     <Content Include="Views\Theme\University\Shared\_wishlistItems.cshtml" />
-    <Content Include="Views\Theme\University\UISettings\SettingsBar.cshtml" />
-    <Content Include="Views\Theme\Smart\UISettings\SettingsBar.cshtml" />
-    <Content Include="Views\Theme\ElecTech\UISettings\SettingsBar.cshtml" />
+    <Content Include="Views\Shared\SettingsBar.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
