Added website warehouses list/edit view. Imported from Changeset 2577

--- a/WMS/WarehouseZone.csproj
+++ b/WMS/WarehouseZone.csproj
@@ -502,6 +502,7 @@
     <Compile Include="App_Start\WebApiConfig.cs" />
     <Compile Include="Controllers\AuthUserGroupsController.cs" />
     <Compile Include="Controllers\ApiCredentialsController.cs" />
+    <Compile Include="Controllers\WebsiteWarehousesController.cs" />
     <Compile Include="Controllers\UISettingsController.cs" />
     <Compile Include="Controllers\TooltipsController.cs" />
     <Compile Include="Controllers\OrderScheduleController.cs" />
@@ -550,6 +551,7 @@
     <Compile Include="CustomBindings\ApiCredentialListCustomBinding.cs" />
     <Compile Include="CustomBindings\TooltipListCustomBinding.cs" />
     <Compile Include="CustomBindings\WebsiteNavigationProductsCustomBinding.cs" />
+    <Compile Include="CustomBindings\WebsiteWarehousesCustomBinding.cs" />
     <Compile Include="CustomBindings\WebsiteProductsCustomBinding.cs" />
     <Compile Include="CustomBindings\WebsiteVouchersCustomBinding.cs" />
     <Compile Include="CustomBindings\WebsiteShippingRuleCustomBinding.cs" />
@@ -2683,6 +2685,8 @@
     <Content Include="Views\Theme\Default\ApiCredentials\Delete.cshtml" />
     <Content Include="Views\Theme\Default\ApiCredentials\Edit.cshtml" />
     <Content Include="Views\Theme\Default\ApiCredentials\Index.cshtml" />
+    <Content Include="Views\Theme\Default\WebsiteWarehouses\_WebsiteWarehousesList.cshtml" />
+    <Content Include="Views\Theme\Default\WebsiteWarehouses\Index.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Service Include="{4A0DDDB5-7A95-4FBF-97CC-616D07737A77}" />
