--- a/GaneEcommerce.Data/Ganedata.Core.Data.csproj
+++ b/GaneEcommerce.Data/Ganedata.Core.Data.csproj
@@ -895,6 +895,10 @@
     <Compile Include="Migrations\202006040423547_Tenant-Warehouses-Added.designer.cs">
       <DependentUpon>202006040423547_Tenant-Warehouses-Added.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\202006071441185_adding-Selector-column-to-UISettingItems-table.cs" />
+    <Compile Include="Migrations\202006071441185_adding-Selector-column-to-UISettingItems-table.designer.cs">
+      <DependentUpon>202006071441185_adding-Selector-column-to-UISettingItems-table.cs</DependentUpon>
+    </Compile>
     <Compile Include="MyDbConfiguration.cs" />
     <Compile Include="Helpers\DataImportFactory.cs" />
     <Compile Include="IApplicationContext.cs" />
@@ -1886,6 +1890,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Migrations\202006040423547_Tenant-Warehouses-Added.resx">
       <DependentUpon>202006040423547_Tenant-Warehouses-Added.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\202006071441185_adding-Selector-column-to-UISettingItems-table.resx">
+      <DependentUpon>202006071441185_adding-Selector-column-to-UISettingItems-table.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <ItemGroup>
