--- a/GaneEcommerce.Services/packages.config
+++ b/GaneEcommerce.Services/packages.config
@@ -5,6 +5,7 @@
   <package id="elmah.corelibrary" version="1.2.2" targetFramework="net472" />
   <package id="Elmah.Mvc" version="2.1.2" targetFramework="net472" />
   <package id="EntityFramework" version="6.4.0" targetFramework="net472" />
+  <package id="ExCSS" version="2.0.6" targetFramework="net472" />
   <package id="Microsoft.AspNet.Mvc" version="5.2.7" targetFramework="net472" />
   <package id="Microsoft.AspNet.Razor" version="3.2.7" targetFramework="net472" />
   <package id="Microsoft.AspNet.WebPages" version="3.2.7" targetFramework="net472" />
