--- a/WarehouseEcommerce/Web.config
+++ b/WarehouseEcommerce/Web.config
@@ -18,7 +18,9 @@
     <!-- connection strings for AZURE -->
     <!--<add name="ApplicationContext" providerName="System.Data.SqlClient"    connectionString="Data Source=l43zbffach.database.windows.net,1433;Initial Catalog=HiveLiveMaster_v3;Integrated Security=False;User Id=wmsadmin;Password=admin123!;Timeout=0;MultipleActiveResultSets=True" />-->
     <!--connection strings for Development Laptop-->
-    <add name="ApplicationContext" providerName="System.Data.SqlClient" connectionString="Data Source=DEV-LAPTOP2;Initial Catalog=LinkV1.2498;User ID=sa;Password=developer;Integrated Security=False;MultipleActiveResultSets=True"/>
+    <!--<add name="ApplicationContext" providerName="System.Data.SqlClient" connectionString="Data Source=DEV-LAPTOP2;Initial Catalog=LinkV1.2498;User ID=sa;Password=developer;Integrated Security=False;MultipleActiveResultSets=True"/>-->
+    <!--connection strings for Sattar Laptop-->
+    <add name="ApplicationContext" providerName="System.Data.SqlClient" connectionString="Data Source=DEV-LAPTOP3;Initial Catalog=LinkV1.2498;User ID=sa;Password=developer;Integrated Security=False;MultipleActiveResultSets=True" />
     <!--connection strings for GDSVR2-->
     <!--<add name="ApplicationContext" providerName="System.Data.SqlClient" connectionString="Data Source=DEVELOPMENT-PC2\MSSQLSERVER01;Initial Catalog=GaneIntranet;Integrated Security=False;User Id=sa;Password=developer;MultipleActiveResultSets=True;Max Pool Size=200;Connection Timeout=30" />-->
     <!--connection strings for Naveed PC-->
@@ -65,15 +67,18 @@
 
     The following attributes can be set on the <httpRuntime> tag.
       <system.Web>
-        <httpRuntime targetFramework="4.7.2" /> 
+        <httpRuntime targetFramework="4.7.2" />
       </system.Web>
   -->
   <system.web>
-    <trust level="Full"/>
+    <trust level="Full" />
     <!--<sessionState mode="SQLServer" sqlConnectionString="Data Source=DEVELOPMENT-PC2\MSSQLSERVER01;Integrated Security=False;User Id=sa;Password=developer;MultipleActiveResultSets=True;Max Pool Size=200;Connection Timeout=30" timeout="240" />-->
     <!--Start session string Development-Laptop-->
-    <sessionState mode="SQLServer" sqlConnectionString="Data Source=DEV-LAPTOP2;User ID=sa;Password=developer;Integrated Security=False;MultipleActiveResultSets=True" timeout="300"/>
+    <!--<sessionState mode="SQLServer" sqlConnectionString="Data Source=DEV-LAPTOP2;User ID=sa;Password=developer;Integrated Security=False;MultipleActiveResultSets=True" timeout="300" />-->
     <!--End session string Development-Laptop-->
+    <!--Start session string Sattar Laptop-->
+    <sessionState mode="SQLServer" sqlConnectionString="Data Source=DEV-LAPTOP3;User ID=sa;Password=developer;Integrated Security=False;MultipleActiveResultSets=True" timeout="300" />
+    <!--End session string Sattar Laptop-->
     <!--Start session string Naveed PC-->
     <!--<sessionState mode="SQLServer" sqlConnectionString="Data Source=DESKTOP-H9GO0QC\SQLEXPRESS;Integrated Security=false;User Id=sa;Password=Test@123;MultipleActiveResultSets=True;" timeout="300" />-->
     <!--End session string Naveed PC-->
