--- a/WMS/packages.config
+++ b/WMS/packages.config
@@ -25,6 +25,7 @@
   <package id="jQuery.Validation" version="1.19.1" targetFramework="net472" />
   <package id="jquery-globalize" version="1.4.2" targetFramework="net472" />
   <package id="knockoutjs" version="3.5.1" targetFramework="net472" />
+  <package id="LazyCache" version="2.0.4" targetFramework="net472" />
   <package id="Microsoft.AspNet.Mvc" version="5.2.7" targetFramework="net472" />
   <package id="Microsoft.AspNet.Razor" version="3.2.7" targetFramework="net472" />
   <package id="Microsoft.AspNet.Web.Optimization" version="1.1.3" targetFramework="net472" />
@@ -38,7 +39,11 @@
   <package id="Microsoft.Data.Edm" version="5.8.4" targetFramework="net472" />
   <package id="Microsoft.Data.OData" version="5.8.4" targetFramework="net472" />
   <package id="Microsoft.Data.Services.Client" version="5.8.4" targetFramework="net472" />
+  <package id="Microsoft.Extensions.Caching.Abstractions" version="2.1.0" targetFramework="net472" />
+  <package id="Microsoft.Extensions.Caching.Memory" version="2.1.0" targetFramework="net472" />
   <package id="Microsoft.Extensions.DependencyInjection.Abstractions" version="3.1.2" targetFramework="net472" />
+  <package id="Microsoft.Extensions.Options" version="2.1.0" targetFramework="net472" />
+  <package id="Microsoft.Extensions.Primitives" version="2.1.0" targetFramework="net472" />
   <package id="Microsoft.jQuery.Unobtrusive.Ajax" version="3.2.6" targetFramework="net472" />
   <package id="Microsoft.jQuery.Unobtrusive.Validation" version="3.2.11" targetFramework="net472" />
   <package id="Microsoft.Web.Infrastructure" version="1.0.0.0" targetFramework="net472" />
