--- a/WarehouseEcommerce/packages.config
+++ b/WarehouseEcommerce/packages.config
@@ -11,12 +11,18 @@
   <package id="jQuery.Cookie" version="1.4.1" targetFramework="net472" />
   <package id="jQuery.UI.Combined" version="1.12.1" targetFramework="net472" />
   <package id="jQuery.Validation" version="1.19.1" targetFramework="net472" />
+  <package id="LazyCache" version="2.0.4" targetFramework="net472" />
   <package id="Microsoft.AspNet.Mvc" version="5.2.7" targetFramework="net472" />
   <package id="Microsoft.AspNet.Razor" version="3.2.7" targetFramework="net472" />
   <package id="Microsoft.AspNet.TelemetryCorrelation" version="1.0.7" targetFramework="net472" />
   <package id="Microsoft.AspNet.Web.Optimization" version="1.1.3" targetFramework="net472" />
   <package id="Microsoft.AspNet.WebPages" version="3.2.7" targetFramework="net472" />
   <package id="Microsoft.CodeDom.Providers.DotNetCompilerPlatform" version="2.0.1" targetFramework="net472" />
+  <package id="Microsoft.Extensions.Caching.Abstractions" version="2.1.0" targetFramework="net472" />
+  <package id="Microsoft.Extensions.Caching.Memory" version="2.1.0" targetFramework="net472" />
+  <package id="Microsoft.Extensions.DependencyInjection.Abstractions" version="2.1.0" targetFramework="net472" />
+  <package id="Microsoft.Extensions.Options" version="2.1.0" targetFramework="net472" />
+  <package id="Microsoft.Extensions.Primitives" version="2.1.0" targetFramework="net472" />
   <package id="Microsoft.jQuery.Unobtrusive.Validation" version="3.2.11" targetFramework="net472" />
   <package id="Microsoft.Web.Infrastructure" version="1.0.0.0" targetFramework="net472" />
   <package id="Modernizr" version="2.8.3" targetFramework="net472" />
