--- a/WarehouseEcommerce/WarehouseEcommerce.csproj
+++ b/WarehouseEcommerce/WarehouseEcommerce.csproj
@@ -348,6 +348,10 @@
     <Content Include="Content\Theme\University\app\css\customfontIcons.css" />
     <Content Include="Content\Theme\University\app\css\fonts-and-icons.css" />
     <Content Include="Content\Theme\University\app\css\jquery-confirm.min.css" />
+    <Content Include="Content\Theme\University\app\css\ui-settings.css" />
+    <Content Include="Content\Theme\University\app\fonts\SegoeUI-Bold.svg" />
+    <Content Include="Content\Theme\University\app\fonts\SegoeUI-Semibold.svg" />
+    <Content Include="Content\Theme\University\app\fonts\SegoeUI.svg" />
     <Content Include="fonts\gotham\Gotham-Book.svg" />
     <Content Include="fonts\gotham\Gotham-ExtraLight.svg" />
     <Content Include="fonts\gotham\Gotham-Light.svg" />
@@ -712,6 +716,15 @@
     <Content Include="fonts\montserrat\Montserrat-SemiBoldItalic.ttf" />
     <Content Include="fonts\montserrat\Montserrat-Thin.ttf" />
     <Content Include="fonts\montserrat\Montserrat-ThinItalic.ttf" />
+    <Content Include="Content\Theme\University\app\fonts\SegoeUI-Bold.eot" />
+    <Content Include="Content\Theme\University\app\fonts\SegoeUI-Bold.ttf" />
+    <Content Include="Content\Theme\University\app\fonts\SegoeUI-Bold.woff" />
+    <Content Include="Content\Theme\University\app\fonts\SegoeUI-Semibold.eot" />
+    <Content Include="Content\Theme\University\app\fonts\SegoeUI-Semibold.ttf" />
+    <Content Include="Content\Theme\University\app\fonts\SegoeUI-Semibold.woff" />
+    <Content Include="Content\Theme\University\app\fonts\SegoeUI.eot" />
+    <Content Include="Content\Theme\University\app\fonts\SegoeUI.ttf" />
+    <Content Include="Content\Theme\University\app\fonts\SegoeUI.woff" />
     <None Include="packages.config" />
     <None Include="Properties\PublishProfiles\FolderProfile.pubxml" />
     <Content Include="Scripts\esm\popper-utils.js" />
