--- a/WarehouseEcommerce/WarehouseEcommerce.csproj
+++ b/WarehouseEcommerce/WarehouseEcommerce.csproj
@@ -277,7 +277,6 @@
     <Content Include="Content\settings-bar.css" />
     <Content Include="Content\Theme\Smart\app\css\App.css" />
     <Content Include="Content\Theme\Smart\app\css\app.min.css" />
-    <Content Include="Content\Theme\Smart\app\css\fonts-and-icons.css" />
     <Content Include="Content\Theme\Smart\app\fonts\gotham\Gotham-Book.svg" />
     <Content Include="Content\Theme\Smart\app\fonts\gotham\Gotham-ExtraLight.svg" />
     <Content Include="Content\Theme\Smart\app\fonts\gotham\Gotham-Light.svg" />
@@ -346,7 +345,7 @@
     <Content Include="Content\Theme\Smart\app\js\custom.js" />
     <Content Include="Content\PagedList.css" />
     <Content Include="Content\Theme\University\app\css\customfontIcons.css" />
-    <Content Include="Content\Theme\University\app\css\fonts-and-icons.css" />
+    <Content Include="fonts\fonts.css" />
     <Content Include="Content\Theme\University\app\css\jquery-confirm.min.css" />
     <Content Include="Content\Theme\University\app\css\ui-settings.css" />
     <Content Include="Content\Theme\University\app\fonts\SegoeUI-Bold.svg" />
